--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,61 @@
+/*nav*/
+body {
+    font-family: "Open Sans", sans-serif;
+    line-height: 1.4;
+}
+scaffolding.less:32
+body {
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #333;
+    background-color: #fff;
+}
+reset.css:31
+body {
+    line-height: 1;
+}
+
+/*end of nav*/
+/*featured projects*/
+.featured-project {
+    margin-top: -7rem;
+}
+@media (min-width: 992px)
+<style>…</style>
+.container {
+    width: 970px;
+}
+@media (min-width: 768px)
+<style>…</style>
+.container {
+    width: 750px;
+}
+<style>…</style>
+.container {
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+}
+reset.css:18
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+}
+<style>…</style>
+* {
+    box-sizing: border-box;
+}
+user agent stylesheet
+div {
+    display: block;
+}
+/*end of featured projects*/
 .container-fluid {
     padding-right: 15px;
     padding-left: 15px;
@@ -68,24 +126,48 @@ navbar.less:155
 .nav-item{
 	padding-right: 80px;
 	}
+.carausel{
+    /*height:800px;*/
+    border:5px solid red;
+}
+  /*.jumbotron{
+   height: 1200px;
+    padding-top: 10rem;
+    text-align: center;
+    /*background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;*/
+    color: white!important;
+    /*box-shadow: -1px -1px 0 #000, 1px -1px 0 #000,-1px 1px 0 #000, 1px 1px 0 #000;
+    border:8px solid green;
+   }*/
+   .jumbotron h1{
+    color: inherit;
+    
+    font-family: "Monoton", sans-serif;
+    font-size: 7.1rem;
+   }
  .jumbotron-bike
  {
 	background: url("../images/jumbotron-bike.jpg");
 	background-position: cover;
 	background-repeat: no-repeat;
 	background-color: blue;
-	height: 700px;
+	
+}
+.jumbotron p{
+   max-width: 51.3rem;
+    margin:auto;
+    font-size: 21px;
+    font-weight:200;
+    text-shadow: 2px 2px 1px #ff0000;
 }
 .jumbotron-bike p,
 .jumbtron-flowers p,
 .jumbotron-beer p,
 .jumbotron-duffel p
 {
-	color: white;
-	margin: 0 auto;
-	text-align: center;
-	padding-top: 350px;
-	text-shadow: 2px 2px 1px #ff0000;
+
 }
 .jumbtron-flowers
  {
@@ -93,7 +175,7 @@ navbar.less:155
     background-position: cover;
     background-repeat: no-repeat;
     background-color: blue;
-    height: 700px;
+    
 }
 
 .jumbotron-beer
@@ -102,7 +184,7 @@ navbar.less:155
     background-position: cover;
     background-repeat: no-repeat;
     background-color: blue;
-    height: 700px;
+    
 }
 
 .jumbotron-duffel
@@ -111,9 +193,13 @@ navbar.less:155
     background-position: cover;
     background-repeat: no-repeat;
     background-color: blue;
-    height: 700px;
+    }
+.relative-wrapper {
+    position: relative;
+    top: -16rem;
+    width: 100%;
+    text-align: center;
 }
-
 .image-container{
 	
 	overflow: hidden;
@@ -127,4 +213,107 @@ navbar.less:155
     -webkit-transform: scale(1.3);
     -ms-transform: scale(1.3);
     transform: scale(1.3);
+}
+/*last part*/
+.help {
+    padding: 5.2rem 0;
+    background-color: #f3f3f3;
+    text-align: center;
+}
+.help strong {
+    display: inline-block;
+    margin-bottom: 1.4rem;
+    font-size: 2.5rem;
+    font-weight: bold;
+}
+.help p {
+    max-width: 42rem;
+    margin: auto;
+}
+ strong {
+    font-weight: 700;
+}
+container-fluid {
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;}
+    .btn-primary:hover {
+    background-color: #399bd1;
+    box-shadow: 0 0 12px rgba(0, 0, 0, 0.9);
+}
+
+.btn-primary:hover {
+    color: #fff;
+    background-color: #286090;
+    border-color: #204d74;
+}
+
+.btn.focus, .btn:focus, .btn:hover {
+    color: #333;
+    text-decoration: none;
+}
+
+a:focus, a:hover {
+    color: #23527c;
+    text-decoration: underline;
+}
+
+a:active, a:hover {
+    outline: 0;
+}
+
+.btn-primary {
+    width: 160px;
+    padding: 1.3rem 0;
+    border: 0;
+    margin-top: 2.8rem;
+    background-color: #399bd1;
+    box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
+    transition: .5s box-shadow;
+}
+
+.btn-group-lg>.btn, .btn-lg {
+    padding: 10px 16px;
+    font-size: 18px;
+    line-height: 1.3333333;
+    border-radius: 6px;
+}
+
+.btn-primary {
+    color: #fff;
+    background-color: #337ab7;
+    border-color: #2e6da4;
+}
+
+.btn {
+    display: inline-block;
+    padding: 6px 12px;
+    margin-bottom: 0;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.42857143;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    -ms-touch-action: manipulation;
+    touch-action: manipulation;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-image: none;
+    border: 1px solid transparent;
+    border-radius: 4px;
+}
+
+a {
+    color: #337ab7;
+    text-decoration: none;
+}
+
+
+a {
+    background-color: transparent;
 }
