--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body {
     color: #333;
     background-color: #fff;
 }
-reset.css:31
+
 body {
     line-height: 1;
 }
@@ -22,21 +22,23 @@ body {
     margin-top: -7rem;
 }
 @media (min-width: 992px)
-<style>…</style>
+{
 .container {
     width: 970px;
 }
+}
 @media (min-width: 768px)
-<style>…</style>
+{
 .container {
     width: 750px;
 }
-<style>…</style>
+
 .container {
     padding-right: 15px;
     padding-left: 15px;
     margin-right: auto;
     margin-left: auto;
+}
 }
 reset.css:18
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
@@ -127,28 +129,32 @@ navbar.less:155
 	padding-right: 80px;
 	}
 .carausel{
-    /*height:800px;*/
+    
     border:5px solid red;
 }
-  /*.jumbotron{
-   height: 1200px;
-    padding-top: 10rem;
+  .jumbotron{
+  
+    /*padding-top: 10rem;*/
     text-align: center;
-    /*background-size: cover;
+    background-size: cover;
     background-position: center;
-    background-repeat: no-repeat;*/
-    color: white!important;
-    /*box-shadow: -1px -1px 0 #000, 1px -1px 0 #000,-1px 1px 0 #000, 1px 1px 0 #000;
-    border:8px solid green;
-   }*/
+    background-repeat: no-repeat;
+    margin: 0 auto;
+    /*border:8px solid green;*/
+   }
    .jumbotron h1{
-    color: inherit;
     
-    font-family: "Monoton", sans-serif;
+    font-family: Monoton;
     font-size: 7.1rem;
+    color: white!important;
+    text-shadow: -1px -1px 0 #000,
+                 1px -1px 0 #000,
+                 -1px 1px 0 #000, 
+                 1px 1px 0 #000;
+    text-align: center;
    }
  .jumbotron-bike
- {
+ {  height: 1550px;
 	background: url("../images/jumbotron-bike.jpg");
 	background-position: cover;
 	background-repeat: no-repeat;
@@ -160,6 +166,7 @@ navbar.less:155
     margin:auto;
     font-size: 21px;
     font-weight:200;
+    color: white;
     text-shadow: 2px 2px 1px #ff0000;
 }
 .jumbotron-bike p,
@@ -175,7 +182,7 @@ navbar.less:155
     background-position: cover;
     background-repeat: no-repeat;
     background-color: blue;
-    
+    height: 1550px;
 }
 
 .jumbotron-beer
@@ -184,11 +191,11 @@ navbar.less:155
     background-position: cover;
     background-repeat: no-repeat;
     background-color: blue;
-    
+    height: 1550px;
 }
 
 .jumbotron-duffel
- {
+ {  height: 1550px;
     background: url("../images/jumbotron-duffel.jpg");
     background-position: cover;
     background-repeat: no-repeat;
