--- a/css/style.css
+++ b/css/style.css
@@ -1,217 +1,254 @@
 /*nav*/
-body {
-    font-family: "Open Sans", sans-serif;
-    line-height: 1.4;
-}
-scaffolding.less:32
-body {
-    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-size: 14px;
-    line-height: 1.42857143;
-    color: #333;
-    background-color: #fff;
+body{
+  font-size: 14px;
+  font-family: "Open Sans";
+  box-sizing: border-box;
 }
 
-body {
-    line-height: 1;
+h2{
+  font-size: 2.2rem;
+  font-weight: bold;
+  color: #399bd1;
 }
 
-/*end of nav*/
-/*featured projects*/
-.featured-project {
-    margin-top: -7rem;
-}
-@media (min-width: 992px)
-{
-.container {
-    width: 970px;
-}
-}
-@media (min-width: 768px)
-{
-.container {
-    width: 750px;
+h3{
+  font-size: 2rem;
+  font-weight: bold;
 }
 
-.container {
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto;
-}
-}
-reset.css:18
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
-}
-<style>…</style>
-* {
-    box-sizing: border-box;
-}
-user agent stylesheet
-div {
-    display: block;
-}
-/*end of featured projects*/
-.container-fluid {
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto;
-}
-.navbar-nav {
-    float: left;
-    margin: 0px;
+p{
+  font-size: 1.45rem;
 }
 
-.navbar-nav {
-    margin: 7.5px -15px;
+#categories{
+  color: #399bd1;
 }
 
-.nav {
-    padding-left: 0px;
-    margin-bottom: 0px;
-    list-style: none;
+.container-fluid{
+  padding: 0 1rem;
+  margin: 0 auto;
 }
-/*.navbar-default .navbar-nav>li>a:focus, .navbar-default .navbar-nav>li>a:hover {
-    color: #333;
-    background-color: transparent;
+
+/*somehow this whole thing works for getting the logo to not stick all the way to the right. no idea how*/
+img.navbar-brand.navbar-right{
+  padding-right: 3rem;
 }
-navbar.less:418
-.navbar-default .navbar-nav>li>a {
-    color: #777;
+
+.navbar-default .navbar-nav > .active > a,
+.navbar-default .navbar-nav > .active > a:hover
+.navbar-default .navbar-nav > .active > a:focus{
+  background-color: inherit;
+  color: #399bd1;
 }
-navs.less:32
-.nav>li>a:focus, .nav>li>a:hover {
-    text-decoration: none;
-    background-color: #eee;
+
+.jumbotron{
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+  color: white!important;
+  height: 61.5rem;
+  background-size: cover;
+  text-align: center;
+  background-repeat: no-repeat;
+  padding-top: 10rem;
+  background-position: center;
 }
-/*@media (min-width: 768px)*/
-/*{navbar.less:286
-.navbar-nav>li>a {
-    padding-top: 15px;
-    padding-bottom: 15px;
+
+.jumbotron h1{
+  font-family: "Monoton";
+  font-size: 9.5rem;
 }
-navbar.less:266
-.navbar-nav>li>a {
-    padding-top: 10px;
-    padding-bottom: 10px;
-    line-height: 20px;
-}
-navs.less:23
-.nav>li>a {
-    position: relative;
-    display: block;
-    padding: 10px 15px;
-}
-}
-.navbar {
-    font-size: 1.1rem;
-    font-weight: 600;
-}
-navbar.less:400
-.navbar-default {
-    background-color: #f8f8f8;
-    border-color: #e7e7e7;
-}
-navbar.less:155
-.navbar-fixed-top {
-    top: 0;
-    border-width: 0 0 1px;
-}
-*/
-.nav-item{
-	padding-right: 80px;
-	}
-.carausel{
-    
-    border:5px solid red;
-}
-  .jumbotron{
-  
-    /*padding-top: 10rem;*/
-    text-align: center;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    margin: 0 auto;
-    /*border:8px solid green;*/
-   }
-   .jumbotron h1{
-    
-    font-family: Monoton;
-    font-size: 7.1rem;
-    color: white!important;
-    text-shadow: -1px -1px 0 #000,
-                 1px -1px 0 #000,
-                 -1px 1px 0 #000, 
-                 1px 1px 0 #000;
-    text-align: center;
-   }
- .jumbotron-bike
- {  height: 1550px;
-	background: url("../images/jumbotron-bike.jpg");
-	background-position: cover;
-	background-repeat: no-repeat;
-	background-color: blue;
-	
-}
+
 .jumbotron p{
-   max-width: 51.3rem;
-    margin:auto;
-    font-size: 21px;
-    font-weight:200;
-    color: white;
-    text-shadow: 2px 2px 1px #ff0000;
-}
-.jumbotron-bike p,
-.jumbtron-flowers p,
-.jumbotron-beer p,
-.jumbotron-duffel p
-{
-
-}
-.jumbtron-flowers
- {
-    background: url("../images/jumbotron-flowers.jpg");
-    background-position: cover;
-    background-repeat: no-repeat;
-    background-color: blue;
-    height: 1550px;
+  width: 70%;
+  margin: 0 auto;
 }
 
-.jumbotron-beer
- {
-    background: url("../images/jumbotron-beer.jpg");
-    background-position: cover;
-    background-repeat: no-repeat;
-    background-color: blue;
-    height: 1550px;
+.jumbotron-bike{
+  background-image: url("../images/jumbotron-bike.jpg");
 }
 
-.jumbotron-duffel
- {  height: 1550px;
-    background: url("../images/jumbotron-duffel.jpg");
-    background-position: cover;
-    background-repeat: no-repeat;
-    background-color: blue;
-    }
-.relative-wrapper {
-    position: relative;
-    top: -16rem;
-    width: 100%;
-    text-align: center;
+.jumbotron-beer{
+  background-image: url("../images/jumbotron-beer.jpg");
 }
+
+.jumbotron-duffel{
+  background-image: url("../images/jumbotron-duffel.jpg");
+}
+
+.jumbotron-flowers{
+  background-image: url("../images/jumbotron-flowers.jpg");
+}
+
+.relative-wrapper{
+  top: -19rem;
+  position: relative;
+  text-align: center;
+  width: 100%;
+}
+.btn-primary{
+  width: 15rem;
+  padding: 2rem 0;
+  border: 1px solid lightgrey;
+  /*background-color: black;*/
+  background-color: rgba(0, 0, 0, 0) ;
+  transition: .5s background-color,
+              .6s box-shadow,
+              .5s border;
+}
+
+.btn-primary:hover,
+.btn-primary:active,
+.btn-primary:focus{
+  background-color: grey;
+  box-shadow: 4px 4px 2px 0px rgba(163,158,163,1);
+  border: 2px solid lightgrey;;
+}
+
 .image-container{
+  overflow: hidden;
+}
+
+.image-container img{
+  opacity: 0.7;
+  width: 100%;
+  transition: .5s transform,
+              .5s opacity;
+}
+
+.image-container img:hover{
+  opacity: 1;
+  transform: scale(1.3);
+}
+
+.projects{
+  margin-bottom: 2rem;
+}
+
+.help {
+  background-color: #f3f3f3;
+  padding: 6rem 0;
+  text-align: center;
+  width: 100%;
+}
+
+.help strong{
+  font-size: 3rem;
+  font-weight: bold;
+  margin-bottom: 1.4rem;
+  display: inline-block
+}
+
+.help p{
+  margin-top: 1.4rem;
+  max-width: 45rem;
+  margin: auto;
+}
+
+.help .btn-primary{
+  margin-top: 2.5rem;
+  color: white;
+  background-color: black;
+}
+
+/*mobile queries*/
+
+@media (min-width:1200px){
+  .projects,
+  .featured-project{
+    width: 1170px;
+  }
+}
+@media (min-width:1024px){
+  .projects,
+  .featured-project{
+    width: 970px;
+  }
+}
+
+@media (min-width:768px){
+  .jumbotron h1{
+    font-size: 7rem;
+  }
+
+  h2{
+    padding: 2rem 0;
+  }
+
+  .projects .project-content{
+    padding-bottom: 5rem;
+  }
+
+  .container-fluid{
+    width: 90%;
+  }
+
+}
+
+@media (max-width:425px){
+  img.navbar-brand.navbar-right{
+    display: none;
+  }
+
+  .navbar-default .navbar-nav{
+    text-align: center;
+  }
+
+  .jumbotron{
+      height: 80rem;
+  }
+
+  .jumbotron h1{
+    padding-top: 9rem;
+    font-size: 6.6rem;
+  }
+
+  .jumbotron p{
+    padding-top: 10%;
+  }
+
+  h2{
+    text-align: center;
+    padding: 2rem 0;
+  }
+
+  .relative-wrapper{
+    top: -23rem;
+  }
+
+  .container-fluid{
+    width: 90%;
+  }
+
+  .projects .project-content{
+    padding-bottom: 5rem;
+  }
+
+  .help strong,
+  .help p{
+    width: 80%;
+  }
+}
+
+@media (max-width: 375px){
+  .jumbotron h1{
+    font-size: 5.9rem;
+  }
+}
+
+@media (max-width: 320px){
+  .jumbotron h1{
+    font-size: 5rem;
+  }
+
+  .help strong{
+    font-size: 2.5rem;
+  }
+}
+
+/*.image-container{
 	
 	overflow: hidden;
 }
-/* featured product*/
+ featured product
 .image-container img{
     transition: transform 0.5s, opacity 0.5s;
 }
@@ -221,7 +258,7 @@ navbar.less:155
     -ms-transform: scale(1.3);
     transform: scale(1.3);
 }
-/*last part*/
+/*last part*
 .help {
     padding: 5.2rem 0;
     background-color: #f3f3f3;
@@ -324,3 +361,4 @@ a {
 a {
     background-color: transparent;
 }
+*/
