--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-/*nav*/
 body{
   font-size: 14px;
   font-family: "Open Sans";
@@ -43,7 +42,7 @@ img.navbar-brand.navbar-right{
 
 .jumbotron{
   text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
-  color: white!important;
+  color: white;
   height: 61.5rem;
   background-size: cover;
   text-align: center;
@@ -84,11 +83,12 @@ img.navbar-brand.navbar-right{
   text-align: center;
   width: 100%;
 }
-.btn-primary{
+
+/*.btn-primary{
   width: 15rem;
   padding: 2rem 0;
   border: 1px solid lightgrey;
-  /*background-color: black;*/
+  background-color: black;
   background-color: rgba(0, 0, 0, 0) ;
   transition: .5s background-color,
               .6s box-shadow,
@@ -101,8 +101,72 @@ img.navbar-brand.navbar-right{
   background-color: grey;
   box-shadow: 4px 4px 2px 0px rgba(163,158,163,1);
   border: 2px solid lightgrey;;
+}*/
+.btn-primary:hover {
+    color: #fff;
+    background-color: #286090;
+    border-color: #204d74;
 }
-
+.btn.focus, .btn:focus, .btn:hover {
+    color: #333;
+    text-decoration: none;
+}
+a:focus, a:hover {
+    color: #23527c;
+    text-decoration: underline;
+}
+a:active, a:hover {
+    outline: 0;
+}
+.btn-primary {
+    width: 160px;
+    padding: 1.3rem 0;
+    border: 0;
+    margin-top: 2.8rem;
+    background-color: #399bd1;
+    box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
+    transition: .5s box-shadow;
+}
+.btn-group-lg>.btn, .btn-lg {
+    padding: 10px 16px;
+    font-size: 18px;
+    line-height: 1.3333333;
+    border-radius: 6px;
+}
+.btn-primary {
+    color: #fff;
+    background-color: #337ab7;
+    border-color: #2e6da4;
+}
+.btn {
+    display: inline-block;
+    padding: 6px 12px;
+    margin-bottom: 0;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.42857143;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    -ms-touch-action: manipulation;
+    touch-action: manipulation;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-image: none;
+    border: 1px solid transparent;
+    border-radius: 4px;
+}
+a {
+    color: #337ab7;
+    text-decoration: none;
+}
+a {
+    background-color: transparent;
+}
+/*end of button*/
 .image-container{
   overflow: hidden;
 }
@@ -243,122 +307,3 @@ img.navbar-brand.navbar-right{
     font-size: 2.5rem;
   }
 }
-
-/*.image-container{
-	
-	overflow: hidden;
-}
- featured product
-.image-container img{
-    transition: transform 0.5s, opacity 0.5s;
-}
-.image-container img:hover {
-    opacity: 1;
-    -webkit-transform: scale(1.3);
-    -ms-transform: scale(1.3);
-    transform: scale(1.3);
-}
-/*last part*
-.help {
-    padding: 5.2rem 0;
-    background-color: #f3f3f3;
-    text-align: center;
-}
-.help strong {
-    display: inline-block;
-    margin-bottom: 1.4rem;
-    font-size: 2.5rem;
-    font-weight: bold;
-}
-.help p {
-    max-width: 42rem;
-    margin: auto;
-}
- strong {
-    font-weight: 700;
-}
-container-fluid {
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto;}
-    .btn-primary:hover {
-    background-color: #399bd1;
-    box-shadow: 0 0 12px rgba(0, 0, 0, 0.9);
-}
-
-.btn-primary:hover {
-    color: #fff;
-    background-color: #286090;
-    border-color: #204d74;
-}
-
-.btn.focus, .btn:focus, .btn:hover {
-    color: #333;
-    text-decoration: none;
-}
-
-a:focus, a:hover {
-    color: #23527c;
-    text-decoration: underline;
-}
-
-a:active, a:hover {
-    outline: 0;
-}
-
-.btn-primary {
-    width: 160px;
-    padding: 1.3rem 0;
-    border: 0;
-    margin-top: 2.8rem;
-    background-color: #399bd1;
-    box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
-    transition: .5s box-shadow;
-}
-
-.btn-group-lg>.btn, .btn-lg {
-    padding: 10px 16px;
-    font-size: 18px;
-    line-height: 1.3333333;
-    border-radius: 6px;
-}
-
-.btn-primary {
-    color: #fff;
-    background-color: #337ab7;
-    border-color: #2e6da4;
-}
-
-.btn {
-    display: inline-block;
-    padding: 6px 12px;
-    margin-bottom: 0;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 1.42857143;
-    text-align: center;
-    white-space: nowrap;
-    vertical-align: middle;
-    -ms-touch-action: manipulation;
-    touch-action: manipulation;
-    cursor: pointer;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    background-image: none;
-    border: 1px solid transparent;
-    border-radius: 4px;
-}
-
-a {
-    color: #337ab7;
-    text-decoration: none;
-}
-
-
-a {
-    background-color: transparent;
-}
-*/
